[package]
name = "jackal"
version = "0.1.0"
authors = ["reedts <j.reedts@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.0"
chrono-tz = "0.4.0"
termion = "1.5"
ical = "0.6.*"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
num-traits = "0.2.14"
bounded-integer = { version = "0.5.0", features = ["macro"]}
unsegen = "0.3.0"
log = "0.4"
flexi_logger = "0.20"
nom = "7.1.0"

[dev-dependencies]
rusty-hook = "0.11.2"

[[bin]]
name = "jk"
path = "src/main.rs"
