[package]
name = "jackal"
version = "0.1.0"
authors = ["reedts <j.reedts@gmail.com>"]
edition = "2018"
default-run = "jk"

[dependencies]
chrono = "0.4.*"
chrono-tz = "0.6.1"
termion = "1.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
num-traits = "0.2.14"
bounded-integer = { version = "0.5.0", features = ["macro"]}
unsegen = "0.3.0"
log = "0.4"
flexi_logger = "0.20"
nom = "7.1.0"
dirs = "4.0.0"
uuid = { version = "1.0.0", features = ["v4"] }
rrule = "0.10.0"
notify-rust = "4.5"
linkify = "0.9"
phf = { version = "0.11.1", features = ["macros"] }
tz-rs = "0.6.14"

# Use fork for serde support
[dependencies.ical]
branch = "ical_serde"
git = "https://github.com/daladim/ical-rs"
features = ["ical", "serde"]

[dev-dependencies]
rusty-hook = "0.11.2"

[[bin]]
name = "jk"

[[bin]]
name = "jk-notify"
