[package]
name = "jackal"
version = "0.1.0"
authors = ["reedts <j.reedts@gmail.com>"]
repository = "https://github.com/reedts/jackal"
edition = "2018"
default-run = "jk"

[dependencies]
chrono = "0.4.*"
chrono-tz = "0.6.1"
termion = "1.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
num-traits = "0.2.14"
bounded-integer = { version = "0.5.0", features = ["macro"]}
unsegen = "0.3.0"
log = "0.4"
flexi_logger = "0.20"
nom = "7.1.0"
dirs = "4.0.0"
uuid = { version = "1.0.0", features = ["v4"] }
rrule = "0.10.0"
notify-rust = "4.5"
linkify = "0.9"
phf = { version = "0.11.1", features = ["macros"] }
tz-rs = "0.6.14"
base64 = "0.13.1"
store-interval-tree = "0.4.0"
notify = "5.0"
derive_more = "0.99.17"
nix = "0.26.2"
backtrace = "0.3.67"
itertools = "0.10.5"
serde_with = "2.3.1"

# Use fork for serde support
[dependencies.ical]
branch = "master"
git = "https://github.com/reedts/ical-rs"
features = ["ical", "serde"]

[dev-dependencies]
rusty-hook = "0.11.2"

[[bin]]
name = "jk"

[[bin]]
name = "jk-notify"
